Added some stuff

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Victor's Website - Main Page</title>
+    <title>Victor's Website - Home</title>
     <link rel="stylesheet" href="resources/css/main.css">
 </head>
     <body>
@@ -11,10 +11,10 @@
             <div class="div-header">
                 <div class="div-title">Victor</div>
                 <div class="div-menus">
-                    <div class="div-menu">Home</div>
-                    <div class="div-menu">Work</div>
-                    <div class="div-menu">About</div>
-                    <div class="div-menu">Contact</div>
+                    <div class="div-menu"><a href="/">Home</a></div>
+                    <div class="div-menu"><a href="/work">Work</a></div>
+                    <div class="div-menu"><a href="/about">About</a></div>
+                    <div class="div-menu"><a href="/contact">Contact</a></div>
                 </div>
             </div>
             <div class="div-content">
