--- a/work/index.html
+++ b/work/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Victor's Website - Work</title>
-    <link rel="stylesheet" href="resources/css/main.css">
+    <link rel="stylesheet" href="../resources/css/main.css">
 </head>
     <body>
         <div class="div-body-container">
