--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Victor's Website - About</title>
     <link rel="stylesheet" href="../resources/css/main.css">
+    <link rel="stylesheet" href="../resources/css/about.css">
 </head>
     <body>
         <div class="div-body-container">
@@ -13,12 +14,26 @@
                 <div class="div-menus">
                     <div class="div-menu"><a href="/">Home</a></div>
                     <div class="div-menu"><a href="/work">Work</a></div>
-                    <div class="div-menu"><a href="/about">About</a></div>
+                    <div class="div-menu"><a class="selected" href="/about">About</a></div>
                     <div class="div-menu"><a href="/contact">Contact</a></div>
                 </div>
             </div>
             <div class="div-content">
-                <div class="div-wip">Work in Progress.<br>Come back later for more.</div>
+                <div class="div-about">
+                    I'm a fairly young programmer excited to get into the games industry professionally. I've been using my few projects as a preview into the field by reversing many games, including some AAA titles, first to see how they work from a technical point of view, and second to see what can be expanded and improved upon.
+                    <br><br>
+                    I love innovative ideas and optimization, that's why I always come back to old pieces of code I did and rewrite them to see if I can make them have better quality and/or performance. Quality has always been one of my top priorities.
+                    <br><br>
+                    Age: 19
+                    <br>
+                    Nationality: Brazilian
+                    <br>
+                    Languages:
+                    <ul>
+                        <li>Portuguese - Mother tongue</li>
+                        <li>English - Advanced</li>
+                    </ul>
+                </div>
             </div>
             <div class="div-footer">
             
