--- a/contact/index.html
+++ b/contact/index.html
@@ -15,7 +15,7 @@
                     <div class="div-menu"><a href="/">Home</a></div>
                     <div class="div-menu"><a href="/work">Work</a></div>
                     <div class="div-menu"><a href="/about">About</a></div>
-                    <div class="div-menu"><a href="/contact">Contact</a></div>
+                    <div class="div-menu"><a class="selected" href="/contact">Contact</a></div>
                 </div>
             </div>
             <div class="div-content">
