--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="div-header">
                 <div class="div-title">Victor</div>
                 <div class="div-menus">
-                    <div class="div-menu"><a href="/">Home</a></div>
+                    <div class="div-menu"><a class="selected" href="/">Home</a></div>
                     <div class="div-menu"><a href="/work">Work</a></div>
                     <div class="div-menu"><a href="/about">About</a></div>
                     <div class="div-menu"><a href="/contact">Contact</a></div>
